# ai-status-reporter

./: .gitignore  README.md  SLACK_HELP_MESSAGE.txt  TEST_QUERIES_SIMPLE.txt  main.py  pyproject.toml  sanitize_n8n_workflows.py  setup_environment.py  verify_outputs_template.py
src/: PRD.md  aggregate_reports.py  ai_data_formatter.py  ai_raw_data_feed.py  generate_mockup_data.py  query_status_log.py  report_generator.py  retention_manager.py  status_log_processor.py  test_cleanup_mockup.py  test_mockup_generation.py  upload_mockup_to_notion.py  verify_outputs.py
src/n8n_workflows/: ai_agent_track_statuses.json  ai_agent_track_statuses.sanitized.json  ai_agent_track_statuses_enhanced.json  ai_agent_track_statuses_enhanced.sanitized.json  clean_log_previous_month.json  clean_log_previous_month.sanitized.json  clean_log_workflow_documentation.md  report_previous_week_month.json  report_previous_week_month.sanitized.json  report_previous_week_moth.json  report_previous_week_moth.sanitized.json
src/prompts/: ai_agent_system_prompt.md  sample_ukrainian_report.md  universal_status_report_prompt.md
